<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.flexbox.FlexboxLayout
        android:padding="20dp"
        app:flexWrap="wrap"
        app:alignItems="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/ancient"
            android:id="@+id/ancient"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:drawableStartCompat="@drawable/ic_ancient" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/art"
            android:id="@+id/art"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:drawableStartCompat="@drawable/ic_art" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/articles"
            android:id="@+id/articles"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_article" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/biography"
            android:id="@+id/biography"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_biography" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/children"
            android:id="@+id/children"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_child" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/religion"
            android:id="@+id/religion"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_religion" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/comics"
            android:id="@+id/comics"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_comic" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/cooking"
            android:id="@+id/cooking"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_cooking" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/drama"
            android:id="@+id/drama"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_drama" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/fiction"
            android:id="@+id/fiction"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_fiction" />


        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/history"
            android:id="@+id/history"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_historic" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/horror"
            android:id="@+id/horror"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_horror" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/literary"
            android:id="@+id/literary"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_literary" />


        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/music"
            android:id="@+id/music"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_music" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/mystery"
            android:id="@+id/mystery"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_mystery" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/poetry"
            android:id="@+id/poetry"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_poetry" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/programming"
            android:id="@+id/programming"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_coding" />


        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/psychology"
            android:id="@+id/psychology"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_psychology" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/romance"
            android:id="@+id/romance"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_romance" />


        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/science"
            android:id="@+id/science"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_science" />


        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/short_stories"
            android:id="@+id/short_stories"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_short_stories" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/sports"
            android:id="@+id/sports"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_sports" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/thriller"
            android:id="@+id/thriller"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_thriller" />

        <TextView
            android:textColor="@color/colorBlack" 
			android:background="@drawable/corner_radius_bg_category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/tamil_bold"
            android:textSize="18sp"
            android:text="@string/travel"
            android:id="@+id/travel"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_travel" />
    </com.google.android.flexbox.FlexboxLayout>

</ScrollView>